# icd-feed

./: README.md  i2cd_config
config/: i2cd_defconfig
dts/: I2CD.dts
i2cd-configs/: Makefile
i2cd-configs/files/etc/: device_info
i2cd-configs/files/etc/dropbear/: authorized_keys
i2cd-configs/files/etc/init.d/: apcliled  custom-c  custom-e  custom-f  custom-g  custom-h  custom-i  custom-j  hostname  last-init  preinit-eth  preinit-wifi
i2cd-configs/files/etc/rc.button/: BTN_1
i2cd-configs/files/etc/uci-defaults/: 11-i2cd-fstab  40-network-config  98-insert-authorized-ssh-keys
i2cd-configs/files/sbin/: apclid  apcliledd  config-wifi-ap  config-wifi-sta  factory-reset
i2cd-twists/: Makefile
i2cd-twists/files/etc/: fw_env.config  fw_env_ext.config
i2cd-twists/files/etc/dropbear/: authorized_keys
i2cd-twists/files/etc/init.d/: apcliled  custom-a  custom-b  custom-d  deploy-authorized-ssh-keys  deploy-mqtt-cert  deploy-ws-cert  deploy-ws-token  disable-wifi-ap  enable-wifi-sta  install-ext-app  last-init  wait4mount  wifiled
i2cd-twists/files/etc/uci-defaults/: 20-firmware-mac  30-firmware-mac  30-hostname  (+9 more)
i2cd-twists/files/sbin/: apcliledd  async-disable-wifi-ap  config-wifi-ap  config-wifi-sta  wifiledd
mtk-wifi-sdk/: Makefile
rsx-upgfmw/: Makefile
rsx-upgfmw-picocom/: Makefile
rt2860v2/: Kconfig.in  Makefile
rt2860v2/files/sbin/: apclid  config-wifi-ap  config-wifi-sta  scan-wifi-ap
rt2860v2/src/rt2860v2_ap/: Makefile
seriald/: Makefile
seriald/src/: CMakeLists.txt  seriald.c  seriald.h  ubus.c  ubus.h  ubus_loop.c  ubus_loop.h
(+48 files in other folders)
